fixing main & section one is overlaping

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,14 @@ a{
     color: #eee;
 }
 
+#main {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    top: 0;
+    text-align: center;
+}
+
 .btn-purple {
     display: inline-block;
     text-transform: uppercase;
@@ -234,11 +242,11 @@ a#section-1-arrow:hover {
 /* SECTION 1 */
 .section-1 {
     position: absolute;
-    top: 59%;
+    top: 0;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    height: 100%;
+    min-height: 70vh;
 }
 
 .section-1-learn-div {
